objects/copado__Epic__c.object
<CustomObject>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Epic_Name__c</fullName>
        <formula>Parent_Epic__r.copado__Epic_Title__c</formula>
        <label>Parent Epic Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Epic</label>
        <referenceTo>copado__Epic__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Epic Priority</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Execution_Order__c</fullName>
        <label>Project Execution Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <inlineHelpText>Small 1 week or less /
Medium 2 weeks or less /
Large 4 weeks or less /
XLarge +4 weeks /
XXL +12 weeks (?)</inlineHelpText>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>XXL</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Theme</label>
        <referenceTo>copado__Theme__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Spent_hours__c</fullName>
        <description>Total time spent on this Epic in hours</description>
        <label>Time Spent (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>copado__Application__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Epic_Details__c</fullName>
        <label>Epic Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Epic_Title__c</fullName>
        <label>Epic Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Technical_Assumptions__c</fullName>
        <label>Technical Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copadometrics__Completion__c</fullName>
        <label>Completion %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Epic</label>
    <listViews>
        <fullName>ALM_Integration_Epics_TDX_21</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Parent_Epic_Name__c</columns>
        <columns>copado__Status__c</columns>
        <columns>copadometrics__Completion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>equals</operation>
            <value>E0000690</value>
        </filters>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>equals</operation>
            <value>E0000703</value>
        </filters>
        <label>ALM Integration Epics TDX 21</label>
    </listViews>
    <listViews>
        <fullName>Active_Epics</fullName>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Parent_Epic_Name__c</columns>
        <columns>Theme__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>copado__Application__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Rachel WOng</value>
        </filters>
        <label>Active Epics</label>
    </listViews>
    <listViews>
        <fullName>BAU_Epics</fullName>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Theme__c</field>
            <operation>equals</operation>
            <value>BAU - Business As Usual</value>
        </filters>
        <label>BAU Epics</label>
        <sharedTo>
            <role>Product_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Beta_Squad_Epics_All_Active</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>Theme__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Parent_Epic_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>rachel,pinett,patricia,carmen</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>contains</operation>
            <value>Value Stream Maps,DevOps Analytics</value>
        </filters>
        <label>Beta Squad Epics -- All Active</label>
    </listViews>
    <listViews>
        <fullName>CCH</fullName>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Theme__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Epic_Title__c</field>
            <operation>contains</operation>
            <value>CCH</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>CCH - Open</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Easy_Squad_Epics_Immediate</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>Theme__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Parent_Epic_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>rachel,pinett,patricia,carmen</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>contains</operation>
            <value>Copado DX,Copado CLI,SFDX Source Format,User Story Bundle</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>lessThan</operation>
            <value>10</value>
        </filters>
        <label>Easy Squad Epics -- Immediate</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Easy_Squad_Epics_Next_Up</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>Theme__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Parent_Epic_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>rachel,pinett,patricia,carmen</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>contains</operation>
            <value>Copado DX,Copado CLI,SFDX Source Format,User Story Bundle</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>lessThan</operation>
            <value>20</value>
        </filters>
        <filters>
            <field>Priority__c</field>
            <operation>greaterOrEqual</operation>
            <value>10</value>
        </filters>
        <label>Easy Squad Epics -- Next Up</label>
    </listViews>
    <listViews>
        <fullName>Easy_Squad_Epics_Active</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>Theme__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Parent_Epic_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>notContain</operation>
            <value>rachel,pinett,patricia,carmen</value>
        </filters>
        <filters>
            <field>Module__c</field>
            <operation>contains</operation>
            <value>Copado DX,Copado CLI,SFDX Source Format,User Story Bundle</value>
        </filters>
        <label>Easy Squad Epics -- All Active</label>
    </listViews>
    <listViews>
        <fullName>Easy_Squad_Epics_Q4_2020</fullName>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>Module__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Parent_Epic_Name__c</columns>
        <columns>Priority__c</columns>
        <columns>Theme__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Epic_Title__c</field>
            <operation>contains</operation>
            <value>Easy-Squad</value>
        </filters>
        <label>Easy Squad Epics Q4 2020</label>
    </listViews>
    <listViews>
        <fullName>Multi_Cloud</fullName>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Theme__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Module__c</field>
            <operation>equals</operation>
            <value>Multi-Cloud</value>
        </filters>
        <label>Multi-Cloud</label>
    </listViews>
    <listViews>
        <fullName>Performance</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Epic_Details__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Theme__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>equals</operation>
            <value>E0000389</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>E0000389</value>
        </filters>
        <label>Performance</label>
    </listViews>
    <listViews>
        <fullName>Robert_s_Epics</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Module__c</columns>
        <columns>copado__Status__c</columns>
        <columns>Theme__c</columns>
        <columns>Parent_Epic__c</columns>
        <columns>Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Robert Sösemann</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>Robert Sösemann</value>
        </filters>
        <label>Robert&apos;s Epics</label>
    </listViews>
    <listViews>
        <fullName>TDX21_Epics</fullName>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>Size__c</columns>
        <columns>Theme__c</columns>
        <columns>Module__c</columns>
        <columns>copado__Release__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Release__c</field>
            <operation>equals</operation>
            <value>v18,v17.4,v17.5,v17.6,v17.7,v17.8,v17.9,v17.10</value>
        </filters>
        <label>TDX21 Epics</label>
    </listViews>
    <listViews>
        <fullName>TDX_ALM_Integrations</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>Parent_Epic_Name__c</columns>
        <columns>Parent_Epic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>equals</operation>
            <value>E0000703</value>
        </filters>
        <filters>
            <field>Parent_Epic__c</field>
            <operation>equals</operation>
            <value>E0000690</value>
        </filters>
        <label>TDX - ALM Integrations</label>
    </listViews>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Epic_Title__c</columns>
        <columns>copado__Release__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Module__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Time_Spent_hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E{0000000}</displayFormat>
        <label>Epic Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <recordTypes>
        <fullName>Copado_Work_Management_Epic</fullName>
        <active>true</active>
        <label>Copado Work Management Epic</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>